--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "files.associations": {
-        "iostream": "cpp"
+        "iostream": "cpp",
+        "tuple": "cpp",
+        "array": "cpp",
+        "utility": "cpp"
     }
 }
